--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Spotify Wrapper",
+  "name": "spotify-wrapper",
   "version": "1.0.0",
   "description": "A wrapper to work with Spotify Web API",
   "main": "index.js",
@@ -47,7 +47,11 @@
     "eslint-plugin-import": "^2.6.1",
     "husky": "^0.11.9",
     "mocha": "^3.2.0",
+    "node-fetch": "^2.1.1",
     "nyc": "^10.2.0",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "sinon": "^4.4.3",
+    "sinon-chai": "^3.0.0",
+    "sinon-stub-promise": "^4.0.0"
   }
 }
